# example-hip-build

./: CMakeLists.txt  README.md  bit_extract.cpp
